@@ -775,6 +775,7 @@ following image formats are supported:
 @item LOCO                   @tab     @tab  X @tab 
 @item Winnov WNV1            @tab     @tab  X @tab 
 @item Autodesk Animator Studio Codec  @tab     @tab  X @tab fourcc: AASC
+@item Fraps FPS1             @tab     @tab  X @tab 
 @end multitable
 
 @code{X} means that the encoding (resp. decoding) is supported.
